[FIX] web: calendar inline fix
When visiting the Month view of the Calendar App, events titles and time will
be displayed inline, showing first the event title, truncated when needed, and
later on the time of the event, at the right of the container.

Task 2200233

--- a/addons/web/static/src/scss/web_calendar.scss
+++ b/addons/web/static/src/scss/web_calendar.scss
@@ -279,8 +279,15 @@ $o-cw-filter-avatar-size: 20px;
                 margin: 0 3px 2px;
 
                 .fc-content {
+                    display: flex;
+                    justify-content: space-between;
+                    flex-direction: row-reverse;                    
+                    margin: 4px 4px 3px;                    
+                }
+
+                .o_event_title {                    
                     @include text-truncate();
-                    margin: 4px 4px 3px;
+                    padding-right: 0.5em;                    
                 }
 
                 &.o_cw_nobg {
